--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -407,6 +407,7 @@ dependencies {
     implementation 'com.hootsuite.android:nachos:1.1.1'
     implementation 'com.nulab-inc:zxcvbn:1.3.0'
     implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
+    implementation 'com.madgag.spongycastle:pg:1.54.0.0'
     implementation 'commons-io:commons-io:2.6'
     implementation 'ch.acra:acra:4.11'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
