--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -375,6 +375,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
     implementation 'androidx.preference:preference:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.0-alpha01'
 
 
     //https://developers.google.com/android/guides/setup
