--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -365,7 +365,7 @@ dependencies {
     implementation "androidx.cardview:cardview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.browser:browser:1.2.0'
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.recyclerViewVersion}"
-    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}-beta01"
+    implementation "androidx.recyclerview:recyclerview-selection:${rootProject.ext.recyclerViewVersion}-rc01"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.ext.lifecycleVersion}"
@@ -383,7 +383,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     //https://mvnrepository.com/artifact/com.google.android.material/material
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     //https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.6'
