--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -259,6 +259,10 @@ android {
         targetCompatibility rootProject.ext.javaSourceCompatibility
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     lintOptions {
         warningsAsErrors true
     }
@@ -376,6 +380,7 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0-alpha01'
+    implementation 'androidx.activity:activity-ktx:1.1.0'
 
 
     //https://developers.google.com/android/guides/setup
