--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -381,6 +381,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0-alpha01'
     implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.1'
 
 
     //https://developers.google.com/android/guides/setup
