Specified ANDROID_NDK_HOME

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -17,6 +17,8 @@ blocks:
           value: /home/semaphore/git/flowcrypt-android
         - name: ANDROID_SDK_ROOT
           value: /home/semaphore/Android/Sdk
+        - name: ANDROID_NDK_HOME
+          value: /home/semaphore/Android/Sdk/ndk-bundle
       jobs:
         - name: Test without mailserver
           commands:
