Updated kotlin plugin version, android gradle plugin. Added android.ndkVersion to the gradle settings. Modified semaphore.yml(added using artifact functionality)

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -319,6 +319,8 @@ android {
             variant.resValue 'string', 'application_id', variant.applicationId
         }
     }
+
+    ndkVersion "21.0.6113669"
 }
 
 easylauncher {
