--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -380,10 +380,10 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
-    implementation 'androidx.preference:preference:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0-alpha02'
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.core:core-ktx:1.3.0-rc01'
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.3'
+    implementation 'androidx.fragment:fragment-ktx:1.2.4'
 
 
     //https://developers.google.com/android/guides/setup
