--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -362,6 +362,10 @@ dependencies {
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'io.github.classgraph:classgraph:4.8.71'
+    testImplementation 'com.flextrade.jfixture:jfixture:2.7.2'
+    testImplementation 'com.shazam:shazamcrest:0.11'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -423,4 +427,5 @@ dependencies {
     implementation 'ch.acra:acra:4.11'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
 }
