Fixed some Parcelable classes. Refactored code.| #759

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ org.gradle.caching=true
 org.gradle.jvmargs=-Xmx2g
 android.useAndroidX=true
 android.enableJetifier=true
+# for roboelectric
+android.enableUnitTestBinaryResources=true
