--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -38,7 +38,7 @@ blocks:
             # build + test
             - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
             # run JUnit tests first
-            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-tests-without-mailserver.sh )
+            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-junit-tests.sh )
 
             # store caches
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
