--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -271,6 +271,10 @@ android {
         exclude 'META-INF/DEPENDENCIES'
     }
 
+    testOptions {
+        animationsDisabled = true
+    }
+
     tasks.register('renameReleaseBuilds') {
         doLast {
             applicationVariants.all { variant ->
