--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -40,7 +40,7 @@ blocks:
             # run JUnit tests first
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-junit-tests.sh )
             # run Lint checks
-            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-lint.sh )
+            - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-lint-checks.sh )
             # Run an emulator and instrumentation tests
             - ~/Android/Sdk/emulator/emulator -accel-check # debug
             - echo -ne '\n' | ~/Android/Sdk/tools/bin/avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
