--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -392,6 +392,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation 'androidx.work:work-runtime-ktx:2.3.4'
 
     //https://developers.google.com/android/guides/setup
     implementation 'com.google.android.gms:play-services-base:17.3.0'
