--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -391,7 +391,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.activity:activity-ktx:1.1.0'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
     implementation 'androidx.work:work-runtime-ktx:2.3.4'
 
     //https://developers.google.com/android/guides/setup
