Fixed lint warnings.| #919

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -257,6 +257,7 @@ android {
 
     lintOptions {
         warningsAsErrors true
+        disable "NullSafeMutableLiveData"
     }
 
     packagingOptions {
