Added a temp version which works with Microsoft OAuth 2.0.| #716

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -46,7 +46,19 @@
 
         <activity
             android:name=".ui.activity.SignInActivity"
-            android:screenOrientation="portrait" />
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- support Microsoft OAuth2.0 -->
+                <data android:scheme="msauth" />
+                <data android:host="${applicationId}" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ui.activity.EmailManagerActivity"
