--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -425,4 +425,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+    implementation 'net.openid:appauth:0.7.1'
 }
