--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -426,4 +426,5 @@ dependencies {
     implementation 'ja.burhanrashid52:photoeditor:1.0.0'
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
     implementation 'net.openid:appauth:0.7.1'
+    implementation 'org.bitbucket.b_c:jose4j:0.7.2'
 }
