--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
                 <!-- support Microsoft OAuth2.0 -->
                 <data
                     android:host="${applicationId}"
+                    android:path="@string/microsoft_redirect_path"
                     android:scheme="msauth" />
             </intent-filter>
         </activity>
