Created init files for "docker-mailserver".| #934

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ FlowCrypt/src/main/assets/.idea/vcs.xml
 FlowCrypt/src/main/assets/.idea/workspace.xml
 
 release/*.apk
+docker-mailserver /maildata_volume/
