--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -356,6 +356,8 @@ dependencies {
     androidTestImplementation "androidx.test:rules:1.3.0"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.test:core-ktx:1.3.0"
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
