--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,8 +34,10 @@ blocks:
             - sudo rm -rf ~/.rbenv ~/.phpbrew
             - cat /proc/cpuinfo
             # Install Android dependencies. We use grep -v = || true to disable printing logs
-            - sudo apt-get update | grep -v = || true
-            - sudo apt-get -yq install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils | grep -v = || true
+            - sudo apt-get update
+            # We use "sudo apt-get -q -y -o Dpkg::Use-Pty=0 install" to disable printing logs. To see them again use "-yq install"
+            - sudo apt-get -q -y -o Dpkg::Use-Pty=0 install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+            # We use "| grep -v = || true" to disable printing logs
             - sdkmanager "platform-tools" "platforms;android-29" "emulator" "extras;google;m2repository" "build-tools;29.0.2" "ndk;21.2.6472646" "cmake;3.10.2.4988404" | grep -v = || true
             - sdkmanager "system-images;android-29;google_apis;x86_64" | grep -v = || true
             # run Lint checks
