--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -35,6 +35,8 @@ blocks:
             - cat /proc/cpuinfo
             # Install Android dependencies
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-install-android-sdk.sh )
+            # Enable gradle daemon. https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:disabling_the_daemon
+            - sudo mkdir -p ~/.gradle && echo "org.gradle.daemon=true" >> ~/.gradle/gradle.properties
             # run Lint checks
             - ( cd $SEMAPHORE_GIT_DIR && ./script/ci-lint-checks.sh )
             # run JUnit tests
