Fixed docker-compose.yml.| #934

--- a/docker-mailserver /docker-compose.yml
+++ b/docker-mailserver /docker-compose.yml
@@ -20,7 +20,7 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_PTRACE
-    restart: no
+    restart: "no"
 volumes:
   mailstate:
     driver: local
