Updated semaphore.yml. Increased the emulator heap size.| #934

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -39,7 +39,8 @@ blocks:
             # run JUnit tests
             - ./script/ci-junit-tests.sh
             # Setup and run an emulator
-            - echo no | avdmanager -v create avd -n ci-test-pixel-x86-64-api29 -k "system-images;android-29;google_apis;x86_64"
+            - echo no | avdmanager -v create avd -n ci-test-pixel-x86-64-api29 -d 19 -k "system-images;android-29;google_apis;x86_64"
+            - echo "vm.heapSize=256"  >> ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
             - emulator -list-avds # debug
             - emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio -gpu auto& # start emulator in the background
             - ./script/ci-wait-for-emulator.sh # wait till ready
