--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -35,14 +35,14 @@ blocks:
             # Enable gradle daemon. https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:disabling_the_daemon
             - sudo mkdir -p ~/.gradle && echo "org.gradle.daemon=true" >> ~/.gradle/gradle.properties
             # run Lint checks
-            - ./script/ci-lint-checks.sh
+            #- ./script/ci-lint-checks.sh
             # run JUnit tests
-            - ./script/ci-junit-tests.sh
+            #- ./script/ci-junit-tests.sh
             # Setup and run an emulator
-            - echo no | avdmanager -v create avd -n ci-test-pixel-x86-64-api29 -d 19 -k "system-images;android-29;google_apis;x86_64"
+            - echo no | avdmanager -v create avd -n ci-test-pixel-x86-api29 -d 19 -k "system-images;android-29;google_apis;x86"
             - echo "vm.heapSize=256"  >> ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
             - emulator -list-avds # debug
-            - emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio -gpu auto& # start emulator in the background
+            - emulator -avd ci-test-pixel-x86-api29 -no-window -no-boot-anim -no-audio -gpu auto& # start emulator in the background
             - ./script/ci-wait-for-emulator.sh # wait till ready
             # Run instrumentation tests
             - ./script/ci-tests-without-mailserver.sh
