--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -395,7 +395,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
     //https://mvnrepository.com/artifact/com.google.android.material/material
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.1.0-rc02'
 
     //https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation 'com.google.code.gson:gson:2.8.6'
