Added mock web server to AttesterSettingsActivityTest. Refactored code. Removed unused code.| #934

--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -186,13 +186,13 @@ android {
             versionNameSuffix "_devTest"
             dimension "standard"
             buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'false'
-            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
-            buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'false'
-            buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"NONE\""
-            buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'false'
-            buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"NONE\""
-            buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
-            buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
+            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'true'
+            buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
+            buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BODY\""
+            buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
+            buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BODY\""
+            buildConfigField 'String', 'ATTESTER_URL', "\"http://localhost:1212/\""
+            buildConfigField 'String', 'API_URL', "\"http://localhost:1212/\""
             resValue 'string', 'gradle_is_acra_enabled', 'false'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -212,28 +212,6 @@ android {
             buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
             buildConfigField 'String', 'ATTESTER_URL', "\"https://flowcrypt.com/attester/\""
             buildConfigField 'String', 'API_URL', "\"https://flowcrypt.com/api/\""
-            resValue 'string', 'gradle_is_acra_enabled', 'true'
-            resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
-            resValue 'string', 'gradle_is_http_log_enabled', 'false'
-            resValue 'string', 'gradle_is_node_http_debug_enabled', 'false'
-            resValue 'string', 'gradle_is_http_log_enabled', 'true'
-            resValue 'string', 'gradle_http_log_level', 'BASIC'
-            resValue 'string', 'gradle_is_node_http_debug_enabled', 'true'
-            resValue 'string', 'gradle_node_http_log_level', 'BASIC'
-            dimension "standard"
-        }
-
-        //This is a test enterprise flavor
-        enterpriseTest {
-            applicationIdSuffix ".enterprise"
-            buildConfigField 'boolean', 'IS_ACRA_ENABLED', 'true'
-            buildConfigField 'boolean', 'IS_MAIL_DEBUG_ENABLED', 'false'
-            buildConfigField 'boolean', 'IS_HTTP_LOG_ENABLED', 'true'
-            buildConfigField 'String', 'HTTP_LOG_LEVEL', "\"BASIC\""
-            buildConfigField 'boolean', 'IS_NODE_HTTP_DEBUG_ENABLED', 'true'
-            buildConfigField 'String', 'NODE_HTTP_LOG_LEVEL', "\"BASIC\""
-            buildConfigField 'String', 'ATTESTER_URL', "\"http://localhost:1212/\""
-            buildConfigField 'String', 'API_URL', "\"http://localhost:1212/\""
             resValue 'string', 'gradle_is_acra_enabled', 'true'
             resValue 'string', 'gradle_is_mail_debug_enabled', 'false'
             resValue 'string', 'gradle_is_http_log_enabled', 'false'
@@ -359,6 +337,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
     androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
+    androidTestImplementation("com.squareup.okhttp3:okhttp-tls:${rootProject.ext.okhttpVersion}")
 
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
     testImplementation "androidx.room:room-testing:$roomVersion"
