--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,7 +25,6 @@ global_job_config:
       - cache restore $ANDROID_SDK_CACHE
       - cache restore $BUILD_NATIVE_CACHE
       - cache restore $BUILD_CACHE
-      - cd docker-mailserver && ./run_email_server.sh && cd -
       # Install Android dependencies
       - ./script/ci-install-android-sdk.sh
 blocks:
@@ -34,16 +33,21 @@ blocks:
       minutes: 59
     task:
       jobs:
-        - name: lint + junit
+        - name: lint
           commands:
             - cat /proc/cpuinfo
             # run Lint checks
             - ./script/ci-lint-checks.sh
-            # run JUnit tests
-            - ./script/ci-junit-tests.sh
+
+        - name: junit
+            commands:
+              # run JUnit tests
+              - ./script/ci-junit-tests.sh
 
         - name: Instrumentation tests
           commands:
+            # Run an email server
+            - cd docker-mailserver && ./run_email_server.sh && cd -
             # Setup and run an emulator
             - $ANDROID_SDK_ROOT/emulator/emulator -accel-check
             - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
