--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -44,7 +44,7 @@ blocks:
             # run JUnit tests
             - ./script/ci-junit-tests.sh
 
-        - name: Instrumentation tests
+        - name: Instrumentation tests - 1
           commands:
             # Run an email server
             - cd docker-mailserver && ./run_email_server.sh && cd -
@@ -56,7 +56,21 @@ blocks:
             - $ANDROID_SDK_ROOT/emulator/emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio &
             - ./script/ci-wait-for-emulator.sh #wait until ready
             # Run instrumentation tests
-            - ./script/ci-instrumentation-tests.sh
+            - ./script/ci-instrumentation-tests_1part.sh
+
+        - name: Instrumentation tests - 2
+          commands:
+            # Run an email server
+            - cd docker-mailserver && ./run_email_server.sh && cd -
+            # Setup and run an emulator
+            - $ANDROID_SDK_ROOT/emulator/emulator -accel-check
+            - echo -ne '\n' | avdmanager -v create avd --name ci-test-pixel-x86-64-api29 --package "system-images;android-29;google_apis;x86_64" --device 'pixel' --abi 'google_apis/x86_64'
+            - cat ~/.android/avd/ci-test-pixel-x86-64-api29.avd/config.ini
+            - $ANDROID_SDK_ROOT/emulator/emulator -list-avds #debug
+            - $ANDROID_SDK_ROOT/emulator/emulator -avd ci-test-pixel-x86-64-api29 -no-window -no-boot-anim -no-audio &
+            - ./script/ci-wait-for-emulator.sh #wait until ready
+            # Run instrumentation tests
+            - ./script/ci-instrumentation-tests_2part.sh
       epilogue:
         on_fail:
           commands:
